# HomeWork_Django

./: README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_image.py  0003_blog_autor.py  0004_remove_blog_autor.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
catalog/fixture/: Catalog_data.json  catalog_data.json  category_data.json  groups.json
catalog/management/commands/: new_data.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_alter_product_image.py  0003_alter_product_manufactured_at.py  0004_alter_category_description_version.py  0005_alter_version_product.py  0006_alter_version_product.py  0007_product_autor.py  0008_alter_product_autor.py  0009_alter_product_options_product_is_published.py  0010_alter_product_options.py  0011_alter_product_options.py  0012_alter_product_options.py  0013_alter_product_options.py  0014_alter_product_is_published.py
catalog/templates/: home.html  product_info.html  products_list.html
catalog/templates/catalog/: contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_info.html  product_list.html
catalog/templatetags/: tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_country.py
users/templates/: login.html
(+6 files in other folders)
